MCR-3143 Apply recent design ideas to existing components (#2203)
* user information resolution
* resource resolution